# rain-async-cqrs

./: .env  Cargo.toml  README.md
rain-aggregates/: Cargo.toml
rain-aggregates/src/user/: mod.rs  user_address_aggregate.rs  user_aggregate.rs
rain-base/: Cargo.toml
rain-base/src/: lib.rs
rain-base/src/error/: error_code.rs
rain-commands/: Cargo.toml
rain-commands/src/user/: mod.rs  user_command.rs
rain-core/: Cargo.toml
rain-core/src/: lib.rs
rain-core/src/error/: error_code.rs
rain-core/src/response/: mod.rs  service_response.rs
rain-model/: Cargo.toml
rain-model/src/user/: mod.rs  user_model.rs
rain-projections/: Cargo.toml
rain-projections/src/user/: mod.rs  user_address_projection.rs
rain-queries/: Cargo.toml
rain-queries/src/user/: mod.rs  user_address_query.rs
rain-repository/: Cargo.toml
rain-repository/src/user/: mod.rs  user_address_read_repository.rs  user_address_write_repository.rs
rain-web/: Cargo.toml
rain-web/resources/: base.toml
rain-web/src/: lib.rs
rain-web/src/config/: configs.rs
rain-web/src/constant/: common_constant.rs  mod.rs
rain-web/src/enums/: mod.rs
rain-web/src/error/: error_code.rs  mod.rs
rain-web/src/response/: service_response.rs
rain-web/src/router/: health_check.rs  mod.rs  register_all_router.rs
rain-web/src/router/user/: mod.rs  user_address_read_router.rs  user_address_router.rs  user_address_write_router.rs  user_all_router.rs
