[package]
name = "rain-aggregates"
version = "1.0.0"
authors = ["rainbing <cnrainbing@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rain-model = { path = "../rain-model" }
rain-repository = { path = "../rain-repository" }
rain-commands = { path = "../rain-commands" }
anyhow = "1.0.55"
async-trait = "0.1.52"
sqlx = { version = "0.5.11", features = ["runtime-tokio-native-tls", "mysql", "chrono","macros","uuid","json","bigdecimal","decimal"] }
