[package]
name = "rain-commands"
version = "1.0.0"
authors = ["rainbing <cnrainbing@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde-aux = "3.0.1"