[package]
name = "rain-projections"
version = "1.0.0"
authors = ["rainbing <cnrainbing@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rain-base = { path = "../rain-base" }
rain-queries = { path = "../rain-queries" }
rain-repository = { path = "../rain-repository" }
rain-model = { path = "../rain-model" }
anyhow = "1.0.55"
async-trait = "0.1.52"
sqlx = { version = "0.5.11", features = ["runtime-tokio-native-tls", "mysql", "chrono","macros","uuid","json","bigdecimal","decimal"] }
